--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-google-maps": "^4.11.0"
   }
 }
