--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^3.10.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-google-maps": "^4.11.0"
   }
