[feature] search results display, star'd rating system

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-google-maps": "^4.11.0"
+    "react-google-maps": "^4.11.0",
+    "react-star-rating-component": "^1.2.2"
   }
 }
