--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-google-maps": "^6.0.1",
+    "react-scroll": "^1.4.2",
     "react-star-rating-component": "^1.2.2"
   }
 }
