--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.2",
     "chai-jquery": "^2.0.0",
     "enzyme": "^2.5.1",
     "jquery": "^2.2.1",
